Fix carousel scrolling on Firefox

--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -15,7 +15,7 @@
   &__images-container {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
 
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
